--- a/Asteroid-Risk-Classification/neural_network_models.ipynb
+++ b/Asteroid-Risk-Classification/neural_network_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,141 @@
     "import joblib\n",
     "import os\n",
     "from imblearn.over_sampling import SMOTE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from keras import Sequential\n",
+    "from keras.layers import Dense\n",
+    "from keras.optimizers import Adam\n",
+    "from keras.metrics import Precision, Recall\n",
+    "from keras.callbacks import EarlyStopping, CSVLogger\n",
+    "\n",
+    "tf.random.set_seed(42)\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# Get the dataset\n",
+    "# x_train, x_test, y_train, y_test = get_data()\n",
+    "# print(\"Got data\", end=\"\\n\\n\")\n",
+    "\n",
+    "# Detecting the number of input features\n",
+    "# num_input_features = x_train.shape[1]\n",
+    "# print(f\"Number of input features: {num_input_features}\")\n",
+    "\n",
+    "# Building the ANN model\n",
+    "model = Sequential([\n",
+    "    Dense(64, activation='relu', input_shape=(30,)),\n",
+    "    Dense(32, activation='relu'),\n",
+    "    Dense(1, activation='sigmoid')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " lstm (LSTM)                 (None, 30, 50)            10400     \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 30, 50)            0         \n",
+      "                                                                 \n",
+      " lstm_1 (LSTM)               (None, 30, 50)            20200     \n",
+      "                                                                 \n",
+      " dropout_1 (Dropout)         (None, 30, 50)            0         \n",
+      "                                                                 \n",
+      " lstm_2 (LSTM)               (None, 30, 50)            20200     \n",
+      "                                                                 \n",
+      " dropout_2 (Dropout)         (None, 30, 50)            0         \n",
+      "                                                                 \n",
+      " lstm_3 (LSTM)               (None, 50)                20200     \n",
+      "                                                                 \n",
+      " dropout_3 (Dropout)         (None, 50)                0         \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 1)                 51        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 71,051\n",
+      "Trainable params: 71,051\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importing the Keras libraries and packages\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense\n",
+    "from keras.layers import LSTM\n",
+    "from keras.layers import Dropout\n",
+    "from keras.callbacks import EarlyStopping, CSVLogger\n",
+    "\n",
+    "# Initialising the RNN\n",
+    "regressor = Sequential()\n",
+    "\n",
+    "# Adding the first LSTM layer and some Dropout regularisation\n",
+    "regressor.add(LSTM(units = 50, return_sequences = True, input_shape = (30, 1)))\n",
+    "regressor.add(Dropout(0.2))\n",
+    "\n",
+    "# Adding a second LSTM layer and some Dropout regularisation\n",
+    "regressor.add(LSTM(units = 50, return_sequences = True))\n",
+    "regressor.add(Dropout(0.2))\n",
+    "\n",
+    "# Adding a third LSTM layer and some Dropout regularisation\n",
+    "regressor.add(LSTM(units = 50, return_sequences = True))\n",
+    "regressor.add(Dropout(0.2))\n",
+    "\n",
+    "# Adding a fourth LSTM layer and some Dropout regularisation\n",
+    "regressor.add(LSTM(units = 50))\n",
+    "regressor.add(Dropout(0.2))\n",
+    "\n",
+    "# Adding the output layer\n",
+    "regressor.add(Dense(units = 1))\n",
+    "regressor.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense (Dense)               (None, 64)                1984      \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 32)                2080      \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 1)                 33        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 4,097\n",
+      "Trainable params: 4,097\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.summary())"
    ]
   },
   {
